--- a/post-detail.css
+++ b/post-detail.css
@@ -1,9 +1,70 @@
 body {
     display: flex;
+    position: relative;
     justify-content: center;
-    background-color: rgb(0, 0, 0, 0.9); /* 검정색 배경에 불투명도 부여 */
+    align-items: center;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.805); /* 검정색 배경에 불투명도 부여 */
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 
+  }
+  .close-btn-section {
+    position: absolute; /* 절대 위치로 설정 */
+    top: 5px; /* 상단 여백 설정 */
+    right: 20px; /* 우측 여백 설정 */
+  }
+  .close-btn{
+    background: none;
+    border: none;
+    color: white;
+
+  }
+  /*닫기 버튼에 x표시 추가*/
+  .close-btn::before{
+    content: "\00d7";
+    font-size: 50px;
+  }
+  button:hover{
+    cursor: pointer;
+  }
+  .next-slide,
+  .before-slide {
+      width: 40px; /* 너비 조정 */
+      height: 40px; /* 높이 조정 */
+      border-radius: 50%;
+      border: none;
+      font-size: 25px;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+  }
+  
+  .next-slide {
+      right: 20px; /* 오른쪽에 위치 */
+  }
+  
+  .before-slide {
+      left: 20px; /* 왼쪽에 위치 */
+  }
+  .detail-page{
+    display: flex;
+    width: 70vw; /*뷰포트 너비의 70%*/
+    height: 90vh;
+    background-color: white;
+    border-radius: 1%;
+  }
+  .photo-section{
+    height: 100%;
+    width: 50%;
+    border-right: 1px solid rgb(201, 201, 201);
+  }
+  .text-section{
+    height: 100%;
+    width: 50%;
+  }
+  .top{
+    height: 10%;
+    border-bottom: 1px solid rgb(201, 201, 201);
   }
