--- a/post-detail-plus.css
+++ b/post-detail-plus.css
@@ -67,3 +67,25 @@
     font-size: 15px;
     font-weight: 500;
   }
+.middle p{
+  margin: 20px 20px;
+}
+.photo-section img{
+  width: 100%;
+  height: 100%;
+}
+.middle span{
+  color: rgb(146, 146, 146);
+  font-size: small;
+}
+
+/* 좋아요 누르기 전에 숨김처리 */
+#like{
+  display:none;
+}
+.like-click{
+  display: none;
+}
+#unlike:hover,#like:hover{
+  cursor: pointer;
+}
