--- a/post-detail-plus.css
+++ b/post-detail-plus.css
@@ -74,7 +74,7 @@
   width: 100%;
   height: 100%;
 }
-.middle span{
+.comment{
   color: rgb(146, 146, 146);
   font-size: small;
 }
@@ -88,4 +88,8 @@
 }
 #unlike:hover,#like:hover{
   cursor: pointer;
+}
+.semi-title{
+  font-weight: bold;
+  font-size: large;
 }
