--- a/index.css
+++ b/index.css
@@ -163,3 +163,7 @@ button:hover{
     opacity: 0.7; /* 호버될 때 이미지의 불투명도 조절 */
     box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.35); 
 }
+.write-bottom a{
+    font-weight: bold;
+    color: palevioletred;
+}
