--- a/balance-game.css
+++ b/balance-game.css
@@ -1,44 +1,3 @@
-/* .left-section{
-    height: 100%;
-    width: 50%;
-    border-right: 1px solid rgb(201, 201, 201);
-}
-.right-section{
-    height: 100%;
-    width: 50%;
-}
-.left-section, .right-section{
-    display: flex;
-    position: relative;
-    align-items: center;
-    justify-content: center;
-}
-.detail-page img{
-    width: 100%;
-    height: 100%;
-    opacity: 0.7;
-}
-.detail-page h1{
-    position: absolute;
-    font-size: 50px;
-}
-.incorrect::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 0, 0, 0.5); /* 빨간 투명 막의 색상과 투명도 설정 
-    opacity: 0; /* 초기에는 투명하게 설정 
-    transition: opacity 0.3s ease; /* 호버 효과에 적용할 트랜지션 
-}
-
-.right-section:hover .incorrect::before {
-    opacity: 1; /* 호버 시 투명 막이 나타나도록 설정 
-} 
-*/
-
 .post1,.post2,.post3,.post4,.post5 {
     display: flex;
     width: 100%; 
@@ -91,8 +50,8 @@
     transition: opacity 0.3s ease; /* 변화를 부드럽게 만드는 효과 */
 }
 
-.correct:hover::before {
-    opacity: 1; /* 호버 시에만 초록색 막을 나타나게 함 */
+.correct.clicked::before {
+    opacity: 1; /* 클릭 시에만 초록색 막을 나타나게 함 */
 }
 
 .incorrect {
@@ -111,7 +70,12 @@
     transition: opacity 0.3s ease; /* 변화를 부드럽게 만드는 효과 */
 }
 
-.incorrect:hover::before {
-    opacity: 1; /* 호버 시에만 빨간색 막을 나타나게 함 */
+.incorrect.clicked::before {
+    opacity: 1; /* 클릭 시에만 빨간색 막을 나타나게 함 */
+} 
+
+.incorrect:hover,
+.correct:hover{
+    cursor: pointer;
 }
 
